[gd_scene format=3 uid="uid://be3g1my4xgjv3"]

[ext_resource type="Script" uid="uid://dui8jej7g05ki" path="res://Scripts/asteroids.gd" id="1_ybrt5"]
[ext_resource type="Texture2D" uid="uid://b3usk7aefnw8c" path="res://Assets/Enemies/asteroid.png" id="2_ybrt5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7ysfi"]
radius = 24.0

[node name="Asteroids" type="Area2D" unique_id=1334470604]
collision_layer = 32
collision_mask = 20
script = ExtResource("1_ybrt5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=248742323]
shape = SubResource("CircleShape2D_7ysfi")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=2085453743]
texture = ExtResource("2_ybrt5")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="." unique_id=1851941645]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
